HW3/javali_tests/others/new/HW3_MarLin/type_error/cast/ErrCast2.javali
class A {

}

class B extends A {

}

class C {

}

class Main {

   void main() {
      A a;
      B b;
      C c;
      
      a = new A();
      b = new B();
      c = new C();
      
      b = (B) c;
   }
}
